ChangeLog for package tm.plugin.koRpus

changes in version 0.01-4 (2018-02-17)
unreleased:
  - this release is under development
changed:
  - adjusted package to support koRpus >= 0.11 and sylly, especially
    with regards to summary() and hyphen()
  - reaktanz.de supports HTTPS now, updated references
  - vignette is now in RMarkdown/HTML format; the SWeave/PDF version was dropped
added:
  - README.md

changes in version 0.01-3 (2016-07-12)
fixed:
  - the arguments that simpleCorpus() was supposed to pipe to DirSource()
    weren't used
changed:
  - the "paths" argument of topicCorpus() now expects a list, not a vector
  - using the parallel package to be able to use more CPU cores
added:
  - new argument "format" for simpleCorpus(), sourceCorpus(), and
    topicCorpus(), to be able to work with text objects directly, instead of files

changes in version 0.01-2 (2015-07-08)
changed:
  - using the S4 methods of koRpus 0.06-1 now, therefore renamed all methods
    removing the *.corpus suffix (e.g., lex.div.corpus() is now lex.div())
  - renamed classes into kRp.corpus, kRp.sourcesCorpus and kRp.topicCorpus,
    and their generator functions accordingly
added:
  - new methods read.corp.custom(), freq.analysis() and summary()
  - new getter/setter methods: corpusSources(), corpusTopics(), corpusFreq(),
    corpusSummary()
  - first basic unit tests, using the testthat package
  - new option "summary" for lex.div() and readability(), to automatically
    update the summary data.frames
  - first notes in a vignette

changes in version 0.01-1 (2015-06-29)
added:
  - initial release
