@@ -28,6 +28,10 @@ export(topicCorpus)
 exportClasses(kRp.corpus)
 exportClasses(kRp.sourcesCorpus)
 exportClasses(kRp.topicCorpus)
+exportMethods("[")
+exportMethods("[<-")
+exportMethods("[[")
+exportMethods("[[<-")
 exportMethods("corpusFreq<-")
 exportMethods("corpusHyphen<-")
 exportMethods("corpusMeta<-")
