@@ -8,13 +8,13 @@
 \title{Apply lex.div() to all texts in kRp.corpus objects}
 \usage{
 \S4method{lex.div}{kRp.corpus}(txt, summary = TRUE,
-  mc.cores = getOption("mc.cores", 1L), ...)
+  mc.cores = getOption("mc.cores", 1L), char = "", quiet = TRUE, ...)
 
 \S4method{lex.div}{kRp.sourcesCorpus}(txt, summary = TRUE,
-  mc.cores = getOption("mc.cores", 1L), ...)
+  mc.cores = getOption("mc.cores", 1L), char = "", quiet = TRUE, ...)
 
 \S4method{lex.div}{kRp.topicCorpus}(txt, summary = TRUE,
-  mc.cores = getOption("mc.cores", 1L), ...)
+  mc.cores = getOption("mc.cores", 1L), char = "", quiet = TRUE, ...)
 }
 \arguments{
 \item{txt}{An object of class \code{\link[tm.plugin.koRpus]{kRp.corpus-class}},
@@ -26,6 +26,14 @@ updated by calling \code{\link[tm.plugin.koRpus:summary]{summary}} on the result
 
 \item{mc.cores}{The number of cores to use for parallelization,
       see \code{\link[parallel:mclapply]{mclapply}}.}
+
+\item{char}{Character vector to specify measures of which characteristics should be computed,
+      see
+\code{\link[koRpus:lex.div]{lex.div}} for details.}
+
+\item{quiet}{Logical, if \code{FALSE} shows a status bar for some measures of each text,
+      see
+\code{\link[koRpus:lex.div]{lex.div}} for details.}
 
 \item{...}{options to pass through to \code{\link[koRpus:lex.div]{lex.div}}.}
 }
